feat: implement dark mode support with theme persistence and toggle functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Board Game</title>
+    <!-- Prevent flash of wrong theme (FOUT) -->
+    <script>
+      (function() {
+        const themePreference = localStorage.getItem('theme-preference');
+        const systemPreference = window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+        const theme = themePreference || systemPreference;
+        if (theme === 'dark') {
+          document.documentElement.classList.add('dark');
+        }
+      })();
+    </script>
   </head>
   <body>
     <div id="root"></div>
